Fixes z-index so all buttons work

--- a/fedireads/static/format.css
+++ b/fedireads/static/format.css
@@ -52,7 +52,7 @@ h2 {
     position: fixed;
     top: 0;
     height: 47px;
-    z-index: 1;
+    z-index: 2;
 }
 
 #warning {
@@ -170,7 +170,7 @@ ul.menu a {
     padding-top: 70px;
     position: relative;
     top: -50px;
-    z-index: -1;
+    z-index: 0;
 }
 
 .row {
@@ -307,6 +307,7 @@ button.warning {
 
 .book-preview {
     overflow: hidden;
+    z-index: 1;
 }
 
 .book-preview img {
